<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/initial_contact_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/initial_contact_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/company_title"
        android:gravity="center"
        android:text="@string/initial_contact"
        android:textSize="30dp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/company_position_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/section_title"
            android:gravity="center"
            android:padding="2dp"
            android:paddingRight="5dp"
            android:text="@string/date_of_interaction_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/date_of_interview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/company_position_label"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/date_of_interaction"
            android:inputType="date" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/company_name_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/section_title"
            android:gravity="center"
            android:padding="2dp"
            android:paddingRight="5dp"
            android:text="@string/contact_name_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/company_name_label"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/contact_name"
            android:inputType="text|textCapWords" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/company_email_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/section_title"
            android:gravity="center"
            android:padding="2dp"
            android:paddingRight="5dp"
            android:text="@string/contact_email_address_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/company_email_label"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/contact_email_address"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/contact_phone_number_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/section_title"
            android:gravity="center"
            android:padding="2dp"
            android:paddingRight="5dp"
            android:text="@string/contact_phone_number_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/contact_phone_number_label"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/contact_phone_number"
            android:inputType="phone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/method_of_interaction_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/section_title"
            android:gravity="center"
            android:padding="2dp"
            android:paddingRight="5dp"
            android:text="@string/method_of_interaction_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/method_of_interaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/method_of_interaction_label"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/method_of_interaction"
            android:inputType="text|textMultiLine"
            android:lines="2" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/what_was_discussed_with_contact_label"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/section_title"
            android:gravity="center"
            android:padding="2dp"
            android:paddingRight="5dp"
            android:text="@string/what_did_you_discuss_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/what_was_discussed_with_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@id/what_was_discussed_with_contact_label"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/what_did_you_discuss"
            android:inputType="text|textMultiLine"
            android:lines="5" />
    </RelativeLayout>

</LinearLayout>