<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/received_response_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip">

    <TextView
        android:id="@+id/received_response_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/received_response" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/date_of_response_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calendar_icon"
            android:onClick="showDatePickerDialog"
            android:contentDescription="Calendar for datepicker" />

        <EditText
            android:id="@+id/date_of_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/date_of_response_picker"
            android:layout_weight="2"
            android:hint="@string/date_of_response"
            android:inputType="date" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accepted_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick=""
            android:text="@string/received_offer" />

        <Button
            android:id="@+id/rejected_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/accepted_button"
            android:gravity="center"
            android:onClick=""
            android:text="@string/no_offer" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/received_offer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <EditText
            android:id="@+id/offer_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/offer_amount"
            android:inputType="text" />

        <EditText
            android:id="@+id/offer_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/offer_deadline"
            android:inputType="date" />


        <EditText
            android:id="@+id/received_offer_miscellaneous_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="top"
            android:hint="@string/misc_notes"
            android:inputType="text|textMultiLine"
            android:lines="5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_offer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <EditText
            android:id="@+id/no_offer_miscellaneous_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="top"
            android:hint="@string/misc_notes"
            android:inputType="text|textMultiLine"
            android:lines="5" />
    </LinearLayout>

</LinearLayout>