<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/initial_contact_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="2dp">

    <TextView
        android:id="@+id/initial_contact_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/initial_contact"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/company_date_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="2dp"
            android:paddingEnd="5dp"
            android:text="@string/date_of_interaction_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/date_of_contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/company_date_label"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/date_of_interaction"
            android:inputType="date"
            android:padding="2dp"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:background="@color/primaryColor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/contact_name_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="2dp"
            android:paddingEnd="5dp"
            android:text="@string/contact_name_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/contact_name_label"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/contact_name"
            android:inputType="text|textCapWords"
            android:padding="2dp"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:background="@color/primaryColor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/company_email_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="2dp"
            android:paddingEnd="5dp"
            android:text="@string/contact_email_address_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_email_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/company_email_label"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/contact_email_address"
            android:inputType="textEmailAddress"
            android:padding="2dp"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:background="@color/primaryColor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/contact_phone_number_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="2dp"
            android:paddingEnd="5dp"
            android:text="@string/contact_phone_number_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/contact_phone_number_label"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/contact_phone_number"
            android:inputType="phone"
            android:padding="2dp"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:background="@color/primaryColor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/method_of_interaction_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="2dp"
            android:paddingEnd="5dp"
            android:text="@string/method_of_interaction_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/method_of_interaction"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/method_of_interaction_label"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/method_of_interaction"
            android:inputType="text|textMultiLine|textCapSentences"
            android:lines="2"
            android:padding="2dp"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:background="@color/primaryColor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/what_was_discussed_with_contact_label"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:padding="2dp"
            android:paddingEnd="5dp"
            android:text="@string/what_did_you_discuss_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/what_was_discussed_with_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/what_was_discussed_with_contact_label"
            android:layout_centerVertical="true"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/what_did_you_discuss"
            android:inputType="text|textMultiLine|textCapSentences"
            android:lines="5"
            android:padding="5dp"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>