<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_up_interview_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip">

    <TextView
        android:id="@+id/set_up_interview_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/set_up_interview" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/date_of_interview_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calendar_icon"
            android:onClick="showDatePickerDialog"
            android:contentDescription="Calendar for datepicker" />

        <EditText
            android:id="@+id/date_of_interview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/date_of_interview_picker"
            android:layout_weight="2"
            android:hint="@string/date_of_interview"
            android:inputType="date" />
    </RelativeLayout>

    <EditText
        android:id="@+id/names_of_interviewers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ellipsize="start"
        android:gravity="top"
        android:hint="@string/names_of_interviewers"
        android:inputType="textMultiLine"
        android:lines="5" />

    <EditText
        android:id="@+id/miscellaneous_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="top"
        android:hint="@string/misc_notes"
        android:inputType="text|textMultiLine"
        android:lines="5" />

</LinearLayout>